automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -86,7 +86,8 @@
    },
    "outputs": [],
    "source": [
-    "\"art vande lay\" # \"ART VANDELAY\""
+    "\"art vande la\n",
+    "y\" # \"ART VANDELAY\""
    ]
   },
   {
