automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -86,8 +86,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art vande la\n",
-    "y\" # \"ART VANDELAY\""
+    "\"art vande lay\" # \"ART VANDELAY\""
    ]
   },
   {
