automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -80,22 +80,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'art vande lay'"
+       "'ART VANDE LAY'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"art vande lay\" # \"ART VANDELAY\""
+    "\"art vande lay\".upper() # \"ART VANDELAY\""
    ]
   },
   {
