--- a/index.ipynb
+++ b/index.ipynb
@@ -251,7 +251,7 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\".endswith(end=com) # False"
+    "\"art.vandelay@vandelay.co\".endswith(end=(com)) # False"
    ]
   },
   {
