--- a/index.ipynb
+++ b/index.ipynb
@@ -235,22 +235,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\".endswith(\"om\")# False"
+    "\"art.vandelay@vandelay.co\".endswith(\"co\")# False"
    ]
   },
   {
